# MeshCom-Test

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
MeshCom_Client/: __init__.py  __main__.py  settings.ini  settingsdialog.py  watchlistdialog.py
MeshCom_Client/locales/: MeshCom-Client.pot
MeshCom_Client/locales/de/LC_MESSAGES/: MeshCom-Client.mo  MeshCom-Client.po
MeshCom_Client/locales/en/LC_MESSAGES/: MeshCom-Client.mo  MeshCom-Client.po
