[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MeshCom-Client"
version = "1.0.13"
description = "Python MeshCom-Client for udp communication with MeshCom nodes"
dependencies = ["pygame>=2.1.2"]
readme = {file = "README.md", content-type = "text/markdown"}

# Scripts einbinden
[project.scripts]
MeshCom-Client = "MeshCom_Client.__main__:main"

#[tool.setuptools.packages.find]
#where = ["MeshCom_Client"]

[tool.setuptools]
packages = ["MeshCom_Client"]
